<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Main2Activity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/xchenger"
                android:textSize="35sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:textColor="#029688"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/first_name" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:layout_marginTop="7dp"
                    android:background="#ffffff"
                    android:text="@string/last_name" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/email" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/username" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/phone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/pass" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/repeat_password" />
            </RelativeLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/buttonstyle"
                android:textColor="#fff"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#029688"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/or"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="40dp"
                    android:layout_weight="1"
                    android:background="#029688"
                    />

            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/buttonstyleblut"
                android:text="@string/log_in_with_facebook"
                android:textColor="#fff"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/buttonstylered"
                android:text="@string/log_in_with_google"
                android:textColor="#fff"/>




        </LinearLayout>

    </ScrollView>

</LinearLayout>