<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="#fff"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1">



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buying"
                android:textColor="#000"
                android:textSize="25sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/choosefrom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/spinner_background"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/buy_from" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/buy_amount" />
            </RelativeLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_to"
                android:layout_marginTop="40dp"
                android:textColor="#000"
                android:textSize="25sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/chooseto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/spinner_background"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/send_to" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:inputType="text"
                    android:background="@drawable/borderedt"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:background="#ffffff"
                    android:text="@string/send_amount" />
            </RelativeLayout>


            <Button
                android:id="@+id/nextbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="#fff"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/buttonstyle"/>



        </LinearLayout>

    </ScrollView>



</LinearLayout>